feat: Add email functionality for guest reservations and improve error handling
- Added an email button in the QR code modal to send reservation details to guests.
- Implemented email utilities to create standardized emails with booking links.
- Enhanced error handling in updateGastDetail.php, updateReservationNamesCheckin.php, and updateReservationNamesCheckout.php.
- Introduced a ping.php endpoint for health checks.
- Updated JavaScript files to improve code readability and maintainability.
- Adjusted MySQL error modes for better compatibility.

--- a/reservation.html
+++ b/reservation.html
@@ -20,6 +20,7 @@
           <button id="menuBtn" class="menu-btn">⋮</button>
           <div id="dropdownMenu" class="dropdown-menu hidden">
             <button id="editBtn" class="dropdown-item">Bearbeiten</button>
+            <button id="emailBtn" class="dropdown-item">📧 E-Mail senden</button>
             <button id="stornoBtn" class="dropdown-item">Storno</button>
             <button id="backMenuBtn" class="dropdown-item">Zurück</button>
           </div>
@@ -111,6 +112,7 @@
   </main>
 
   <!-- HTTP Utils für stabilere Verbindungen -->
+  <script src="js/email-utils.js"></script>
   <script src="js/http-utils.js"></script>
   <!-- Loading Overlay für GUI-Sperrung -->
   <script src="js/loading-overlay.js"></script>
