Add new HTML and PHP files for reservation and transport management
- Created `reservierungen-test.html` for testing reservation layout and navigation.
- Implemented `stats-api.php` for fetching statistics related to arrivals, departures, and guest counts.
- Developed `transport-api.php` for managing transport costs and guest arrivals.
- Added `transport.html` for displaying and updating transport costs for guests.
- Introduced `weekly-stats-api.php` for extended weekly statistics on guest arrivals and departures.

--- a/GastDetail.html
+++ b/GastDetail.html
@@ -6,12 +6,17 @@
   <title>Gast-Details bearbeiten</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="reservation.css">
+  <link rel="stylesheet" href="css/navigation.css">
+  <link rel="stylesheet" href="css/navigation-integration.css">
 </head>
 <body>
-  <header>
-    <h1>Gast-Details</h1>
-  </header>
-  <main>
+  <!-- Navigation wird durch JavaScript eingefügt -->
+  
+  <main class="main-content">
+    <header class="legacy-header">
+      <h1>Gast-Details</h1>
+    </header>
+    
     <div class="form-container">
       <form id="gastForm">
         <div class="form-row">
@@ -306,5 +311,8 @@
     });
   </script>
   <script src="js/http-utils.js"></script>
+  
+  <!-- Navigation System -->
+  <script src="js/navigation.js"></script>
 </body>
 </html>
