feat(reservation): Add delete functionality for reservations and enhance search capabilities feat(statistics): Implement incomplete reservations overview with customizable settings feat(api): Create endpoints for deleting reservations and fetching incomplete reservations refactor(transport): Improve search input placeholder and filtering logic

--- a/reservation.html
+++ b/reservation.html
@@ -27,6 +27,7 @@
             <button id="editBtn" class="dropdown-item">Bearbeiten</button>
             <button id="emailBtn" class="dropdown-item">📧 E-Mail senden</button>
             <button id="stornoBtn" class="dropdown-item">Storno</button>
+            <button id="deleteReservationBtn" class="dropdown-item" style="color: #dc3545;">🗑️ Löschen</button>
           </div>
         </div>
       </div>
