feat(reservation): Implement NoShow feature with toggle functionality and UI updates

--- a/reservation.html
+++ b/reservation.html
@@ -57,6 +57,7 @@
             <th>BF</th>
             <th>Arr</th>
             <th>Diät</th>
+            <th>No-Show</th>
             <th>Check-in</th>
             <th>Check-out</th>
           </tr>
